# sheila

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  rustfmt.toml  sheila.toml  taplo.toml  test-discovery.html
.cargo/: config.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  config.rs  discovery.rs  lib.rs  main.rs  output.rs  process.rs  utils.rs
crates/cli/src/commands/: cache.rs  control.rs  list.rs  mod.rs  report.rs  test.rs
crates/cli/src/helpers/: files.rs  mod.rs  output.rs  report.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  macros.rs  misc.rs  result.rs  schemas.rs  suite.rs  test.rs  types.rs
crates/core/src/assert/: mod.rs
crates/core/src/fixtures/: dependency.rs  lifecycle.rs  mod.rs  scope.rs
crates/core/src/internal/: hook.rs  mock.rs  mod.rs  param.rs
crates/core/src/reporting/: mod.rs  types.rs
crates/core/src/reporting/formats/: csv.rs  html.rs  json.rs  mod.rs
crates/core/src/reporting/logging/: debug.rs  mod.rs
crates/core/src/runners/: mod.rs  thin.rs
crates/core/src/runners/cargo/: mod.rs  types.rs  utils.rs
crates/proc-macros/: Cargo.toml  README.md
crates/proc-macros/src/: lib.rs
crates/server/: Cargo.toml
crates/sheila-core/: Cargo.toml
crates/sheila-core/src/: lib.rs
examples/: Cargo.toml
examples/src/: basic.rs  filesystem.rs  lib.rs
scripts/: build-release.sh  check.sh  clean.sh  test.sh
test-results/: test_report_20250823_034303_3a98ed7a47ca44688bd87e2f42149f60.json  test_report_20250823_053637_980847928a594252.html
