[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
base64 = "0.22.1"

bytemuck = "1.23.1"
bincode = "1.3.3"

auto_impl = "1.3.0"
bytes = "1.10.1"
byteorder = "1.5.0"
bitflags = "2.9.1"
crossbeam = "0.8.4"
chrono = "0.4.41"
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
num-integer = "0.1.46"
num-derive = "0.4.2"
num_enum = "0.7.4"
regex = "1.11.1"
ruint = "1.15.0"
sha2 = "0.10.9"
strum = "0.27.1"
strum_macros = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.9.2"

smol_str = "0.3.2"

sha2-const-stable = "0.1.0"
indexmap = "2.10.0"
thiserror = "2.0.12"
uint = "0.10.0"
libm = "0.2.15"
libc = "0.2.174"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.fast]
inherits = "dev"
lto = true
panic = "abort"
codegen-units = 1
panic-strategy = "abort"
