[workspace]
resolver = "2"
members = [
    "crates/*",
    "examples",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
sheila = { path = "crates/core", features = ["macros"] }
sheila-proc-macros = { path = "crates/proc-macros" }

anyhow = "1.0.98"
csv = "1.1"
chrono = "0.4.38"
rand = "0.8.5"
base64 = "0.22.1"
uuid = { version = "1.9.1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27.1"
strum_macros = "0.27"
toml = "0.9.2"
smol_str = "0.3.2"
indexmap = "2.10.0"
thiserror = "2.0.12"
libc = "=0.2.175"

indicatif = "0.17"
assertables = "9.2.34"
test-log = { version = "0.2.18", features = ["log", "trace"] }
pprof = { version = "0.3", features = ["flamegraph"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"

[profile.fast]
inherits = "dev"
lto = true
panic = "abort"
codegen-units = 1
panic-strategy = "abort"
