[package]
name = "sheila-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sheila"
path = "src/main.rs"

[dependencies]
sheila = { workspace = true, features = ["full"] }
sheila-proc-macros = { workspace = true, features = ["cargo-test"] }

# CLI and argument parsing
clap = { version = "4.5", features = ["derive"] }

# UI and output formatting
tiny-gradient = "0.1.0"
indicatif = "0.18.0"
color-eyre = "0.6.5"
console-utils = "1.7.0"
colored = "3.0.0"

# Error handling
thiserror = "2.0.10"
anyhow = { workspace = true }

# Serialization and data formats
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
toml = { workspace = true }

# File system and path operations
walkdir = "2.5.0"
globset = "0.4.16"
regex = "1.11.1"

# Async runtime and process management
tokio = { version = "1.0", features = ["full"] }
uuid = { workspace = true }
chrono = { workspace = true }

# Process and system operations
sysinfo = "0.32.1"
signal-hook = "0.3.17"
libc = { workspace = true }
dirs = "5.0.1"

[dev-dependencies]
