[package]
name = "sheila"
version.workspace = true
edition.workspace = true

[features]
default = ["regex", "macros"]
full = ["regex", "macros", "reporters", "global-mocks", "cargo-compat"]
macros = ["sheila-proc-macros"]

reporters = ["json", "csv", "html"]
json = []
csv = []
html = []
junit = []
tap = []

global-mocks = []
cargo-compat = []
regex = ["dep:regex"]

[dependencies]
sheila-proc-macros = { workspace = true, optional = true }
regex = { version = "1.11.1", optional = true }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
cmdstruct = "2.0.1"
parking_lot = "0.12.4"
nom = "8.0.0"

mio = { version = "1.0", features = ["os-poll", "net"] }
libc.workspace = true

thiserror.workspace = true
indexmap = { workspace = true, features = ["serde"] }
csv.workspace = true
smol_str.workspace = true
strum.workspace = true
strum_macros.workspace = true

tracing = "0.1"
tracing-subscriber = "0.3"

chrono = { workspace = true, features = ["serde"] }
similar = "2.6"
html-escape = "0.2.13"
colored = "3.0.0"

[dev-dependencies]
test-log.workspace = true
assertables.workspace = true
